# MAREC

./: .gitignore  CLAUDE.md  CMakeLists.txt  SAYA SURVEY MAREC.rtf  Saddle Club_ep103.txt
.claude/: settings.local.json
docs/: guide.html  guide.md  style.css
gui/MAREC.xcodeproj/: project.pbxproj
gui/MAREC.xcodeproj/xcshareddata/xcschemes/: MAREC.xcscheme  MARECUITests.xcscheme
gui/MAREC/App/: AccessibilityID.swift  ContentView.swift  MARECApp.swift
gui/MAREC/Models/: AppState.swift  MarecModels.swift
gui/MAREC/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
gui/MAREC/Services/: Logger.swift  MarecCLIService.swift
gui/MAREC/Theme/: Theme.swift
gui/MAREC/ViewModels/: MarecViewModel.swift
gui/MAREC/Views/: ConnectionView.swift  ExecutionView.swift  ImportMarkersView.swift  PreviewView.swift  ResultsView.swift  TrackSelectionView.swift
gui/MAREC/Views/Components/: CollapsibleSection.swift  SearchBar.swift
gui/MARECUITests/: AlreadyCorrectUITest.swift  BasicRenameUITest.swift  BeforeFirstMarkerUITest.swift  DuplicatesUITest.swift  EmptySessionUITest.swift  MARECUITestBase.swift  MultiTrackUITest.swift  NavigationUITest.swift  NoMarkersUITest.swift  TestHarnessHelper.swift
src/: cli.cpp  cli.h  diagnostic.cpp  main.cpp  marker_matcher.cpp  marker_matcher.h  ptsl_commands.cpp  ptsl_commands.h  ptsl_connection.cpp  ptsl_connection.h  session_data.h  test_harness.cpp  test_session_builder.cpp  test_session_builder.h  test_wav_writer.cpp  test_wav_writer.h  text_export_parser.cpp  text_export_parser.h  time_utils.cpp  time_utils.h  track_selector.cpp  track_selector.h
tasks/: lessons.md  todo.md
tests/: test_marker_matcher.cpp  test_session_data.cpp  test_text_export_parser.cpp  test_time_utils.cpp
